examples/compile-error/bad5.vc
internal func lol() { }

func main() { }
